New Post: VSCode shortcuts

--- a/src/components/Layout.css
+++ b/src/components/Layout.css
@@ -1,5 +1,4 @@
 * {
-    font-family: "Ubuntu", "Open Sans", "Sans";
     line-height: 1.3;
 }
 
@@ -8,6 +7,7 @@
 } */
 
 body {
+    font-family: "Ubuntu", "Open Sans", "Sans";
     margin: auto;
     max-width: 600pt;
     padding: 10pt;
@@ -44,4 +44,10 @@ footer {
     font-size: 80%;
     border-top: 1pt solid maroon;
     margin-top: 15pt;
+}
+
+code {
+    background-color: #ddd;
+    padding: 1pt 3pt 1pt 3pt;
+    border-radius: 2pt;
 }
