--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,8 +1,8 @@
 * {
     line-height: 1.5;
 }
-.block, blockquote {
-  background-color: #eee;
+.block, blockquote, pre {
+  background-color: #ddd;
   padding: 6pt;
   margin: 6pt 0 6pt;
   border-radius: 4pt;
